java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint5.pass
package org.netbeans.test.java.hints;

import java.util.Map;

public class ImportTest5 {
    
    /** Creates a new instance of ImportTest */
    public ImportTest5() {
        Map.Entry e;
    }
    
}
